--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie-edge" />
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>A Title</title>
   </head>
   <body>
