--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,6 +8,15 @@
     <title>A Title</title>
   </head>
   <body>
-    Some text
+    <h1>Nice. It's looking good already.</h1>
+    <ul>
+      {{ range (where .Pages "Section" "blog") }}
+      <li>
+        <a href="{{ .RelPermalink }}">
+          {{ .Title }}
+        </a>
+      </li>
+      {{ end }}
+    </ul>
   </body>
 </html>
