Filling in tutorial files.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
     <title>A Title</title>
   </head>
   <body>
-    <h1>Nice. It's looking good already.</h1>
+    <h1>A Header</h1>
     <ul>
       {{ range (where .Pages "Section" "blog") }}
       <li>
